apps/client-sso/services.yaml
apiVersion: v1
kind: Service
metadata:
  name: client-sso-stable
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-sso
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: stable
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3103
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: client-sso
---
apiVersion: v1
kind: Service
metadata:
  name: client-sso-canary
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-sso
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
    rollouts.argoproj.io/service-role: canary
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 3103
      targetPort: http
      protocol: TCP
  selector:
    app.kubernetes.io/name: client-sso
