apps/client-sso/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: client-sso
  namespace: ndmastery
  labels:
    app.kubernetes.io/name: client-sso
    app.kubernetes.io/part-of: ndmastery
    app.kubernetes.io/managed-by: argo-rollouts
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`sso.ndmastery.com`)
      kind: Rule
      services:
        - name: client-sso-wrr
          kind: TraefikService
      middlewares:
        - name: ndmastery-secure-headers
        - name: ndmastery-compress
  tls:
    secretName: client-sso-tls
    options:
      name: ndmastery-modern-tls
      namespace: ndmastery
